--- a/package.json
+++ b/package.json
@@ -1,47 +1,44 @@
 {
-  "name": "la_sapora_dell_italia",
-  "version": "0.1.0",
-  "private": true,
-  "description": "An e-commerce fullstack (php, typescript, react, php, node, mysql) school project about a restaurant.",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.115",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
-    "gsap": "^3.12.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "splitting": "^1.1.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "la_sapora_dell_italia",
+   "version": "0.1.0",
+   "private": true,
+   "description": "An e-commerce fullstack (php, typescript, react, php, node, mysql) school project about a restaurant.",
+   "dependencies": {
+      "@types/jest": "^27.5.2",
+      "@types/node": "^16.18.115",
+      "@types/react": "^18.3.12",
+      "@types/react-dom": "^18.3.1",
+      "axios": "^1.7.7",
+      "dotenv": "^16.4.5",
+      "gsap": "^3.12.5",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-router-dom": "^6.27.0",
+      "react-scripts": "5.0.1",
+      "splitting": "^1.1.0",
+      "typescript": "^4.9.5"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
