--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "private": true,
    "description": "An e-commerce fullstack (php, typescript, react, php, node, mysql) school project about a restaurant.",
    "dependencies": {
+      "@gsap/react": "^2.1.1",
       "@types/jest": "^27.5.2",
       "@types/node": "^16.18.115",
       "@types/react": "^18.3.12",
@@ -19,10 +20,14 @@
       "typescript": "^4.9.5"
    },
    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
+      "start:webpack": "webpack serve --mode development",
+      "start:react": "react-scripts start",
+      "build:react": "react-scripts build",
+      "build:webpack:dev": "webpack --mode development --watch",
       "test": "react-scripts test"
    },
+   "proxy": "http://localhost/sapore_dell_italia",
+   "homepage": ".",
    "eslintConfig": {
       "extends": [
          "react-app",
@@ -40,5 +45,16 @@
          "last 1 firefox version",
          "last 1 safari version"
       ]
+   },
+   "devDependencies": {
+      "@types/splitting": "^1.0.6",
+      "autoprefixer": "^10.4.20",
+      "css-loader": "^7.1.2",
+      "postcss": "^8.4.47",
+      "postcss-loader": "^8.1.1",
+      "style-loader": "^4.0.0",
+      "tailwindcss": "^3.4.14",
+      "ts-loader": "^9.5.1",
+      "webpack-cli": "^5.1.4"
    }
 }
