--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "axios": "^1.7.7",
       "dotenv": "^16.4.5",
       "gsap": "^3.12.5",
+      "jwt-decode": "^4.0.0",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-router-dom": "^6.27.0",
